banner resize fix (can't make the left part visible if too small)

--- a/project1/styles/styles.css
+++ b/project1/styles/styles.css
@@ -58,6 +58,9 @@
     padding-left: 10%;
     padding-right: 10%;
     text-align: center;
+    background-size: contain;
+    background-position: top center;
+    background-repeat: no-repeat;
   }
   #welcome h1,
   #welcome h2{
